--- a/WebUI/FMIRatingsWeb/public_html/css/main.css
+++ b/WebUI/FMIRatingsWeb/public_html/css/main.css
@@ -10,7 +10,7 @@ and open the template in the editor.
 
 
 body {
-    padding-top: 10px;
+    padding-top: 0;
     padding-left: 10px;
     padding-right: 10px;
     padding-bottom: 10px;
