--- a/WebUI/FMIRatingsWeb/public_html/css/main.css
+++ b/WebUI/FMIRatingsWeb/public_html/css/main.css
@@ -21,3 +21,12 @@ body {
     text-align: center;
 }
 
+/*START PAGE CUSTOM CSS*/
+#start-page-carousel-div {
+    padding: 5px;
+    margin-top: 0;
+}
+
+#start-page-carousel-div .carousel-control.left, .carousel-control.right {
+    background-image: none
+}
