--- a/WebUI/FMIRatingsWeb/public_html/css/main.css
+++ b/WebUI/FMIRatingsWeb/public_html/css/main.css
@@ -14,6 +14,8 @@ body {
     padding-left: 10px;
     padding-right: 10px;
     padding-bottom: 10px;
+    
+    color: black;
 }
 
 .screen-center {
