--- a/WebUI/FMIRatingsWeb/public_html/css/main.css
+++ b/WebUI/FMIRatingsWeb/public_html/css/main.css
@@ -14,13 +14,28 @@ body {
     padding-left: 10px;
     padding-right: 10px;
     padding-bottom: 10px;
-    
     color: black;
 }
 
 .screen-center {
     padding-top: 10%;
     text-align: center;
+}
+
+.navbar {
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+
+#body-wrapper {
+    margin-top: 0;
+    padding-top: 51px;
+}
+
+.inner-container {
+    margin-top: 0; 
+    padding-top: 0;
 }
 
 /*START PAGE CUSTOM CSS*/
