--- a/WebUI/FMIRatingsWeb/public_html/css/main.css
+++ b/WebUI/FMIRatingsWeb/public_html/css/main.css
@@ -22,9 +22,13 @@ body {
     text-align: center;
 }
 
+.center {
+    text-align: center;
+}
+
 .navbar {
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 1%;
+    padding-right: 1%;
 }
 
 
@@ -36,6 +40,8 @@ body {
 .inner-container {
     margin-top: 0; 
     padding-top: 0;
+    padding-left: 0.4%;
+    padding-right: 0.4%;
 }
 
 /*START PAGE CUSTOM CSS*/
@@ -52,10 +58,22 @@ body {
     width: 20%;
 }
 
+.rate-group {
+    padding-left: 3%;
+    padding-right: 3%;
+    padding-top: 1%;
+}
+
 .rating-table>tbody>tr>th, .rating-table>tbody>tr>td {
     border-top: none;
 }
 
 .progress-label-td{
     width: 30%;
+}
+
+#discipline-ratings-table-container {
+    padding: 2%;
+    background-color: #f9f9f9;
+    color: #204d74;
 }
