--- a/FMIRatingsAPI/FMIRatingsAPI/Views/Home/Index.cshtml
+++ b/FMIRatingsAPI/FMIRatingsAPI/Views/Home/Index.cshtml
@@ -2,8 +2,9 @@
     <section class="featured">
         <div class="content-wrapper">
             <hgroup class="title">
-                <h1>Content</h1>
-               
+                <h1>
+                    @Html.ActionLink("API Documentation", "Index", "Help", new { area = "" }, null)
+                </h1>
             </hgroup>
 
         </div>
