--- a/WebUI/FMIRatingsWeb/public_html/css/main.css
+++ b/WebUI/FMIRatingsWeb/public_html/css/main.css
@@ -72,7 +72,7 @@ body {
     width: 30%;
 }
 
-#discipline-ratings-table-container {
+#discipline-ratings-table-container, #teacher-ratings-table-container {
     padding: 2%;
     background-color: #f9f9f9;
     color: #204d74;
