--- a/FMIRatingsAPI/FMIRatingsAPI/Areas/HelpPage/Views/Help/Index.cshtml
+++ b/FMIRatingsAPI/FMIRatingsAPI/Areas/HelpPage/Views/Help/Index.cshtml
@@ -23,10 +23,7 @@
 <div id="body" class="help-page">
     <section class="featured">
         <div class="content-wrapper">
-            <h2>Introduction</h2>
-            <p>
-                Provide a general description of your APIs here.
-            </p>
+            <h2>FMI Ratings</h2>
         </div>
     </section>
     <section class="content-wrapper main-content clear-fix">
