--- a/FMIRAtingsAndroid/res/layout/add_comment_layout.xml
+++ b/FMIRAtingsAndroid/res/layout/add_comment_layout.xml
@@ -1,15 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent" 
+    >
 
+    <TextView android:id="@+id/add_rating_label"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:gravity="center"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="@dimen/app_margin_big"
+        android:text="@string/add_rating"/>
+    
     <RatingBar
-        android:id="@+id/ratePlace"
+        android:id="@+id/addRating"
         style="?android:attr/ratingBarStyleIndicator"
         android:layout_width="wrap_content"
         android:layout_height="21dp"
-        android:layout_alignParentLeft="true"
-        android:layout_centerVertical="true"
+        android:layout_below="@id/add_rating_label"
+        android:layout_centerHorizontal="true"
+        android:rating="2"
         android:numStars="5"
         android:progressDrawable="@drawable/review_ratings_stars_states" />
 
