Added post query - PostVoteForTeacher Added new constants in APIConnectionConstants.java

--- a/FMIRAtingsAndroid/res/drawable/review_ratings_stars_states.xml
+++ b/FMIRAtingsAndroid/res/drawable/review_ratings_stars_states.xml
@@ -7,5 +7,5 @@
     <item
         android:id="@android:id/progress"
         android:drawable="@drawable/star_full" />
-
+<item android:icon="@drawable/ic_launcher" ></item>
 </layer-list>
