--- a/FMIRAtingsAndroid/res/layout/recyclerview_item.xml
+++ b/FMIRAtingsAndroid/res/layout/recyclerview_item.xml
@@ -5,4 +5,8 @@
     android:orientation="vertical" >
     
 
+    <TextView android:id="@+id/item_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@android:color/black"/>
 </LinearLayout>
