--- a/FMIRAtingsAndroid/res/layout/teacher_fragment_layout.xml
+++ b/FMIRAtingsAndroid/res/layout/teacher_fragment_layout.xml
@@ -2,7 +2,47 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
-    
+    android:orientation="vertical" 
+    android:padding="@dimen/app_margin_big">
+
+    <TextView
+        android:id="@+id/teacher_name_label"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/name" />
+
+    <TextView
+        android:id="@+id/teacher_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/teacher_department_label"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/department" />
+
+    <TextView
+        android:id="@+id/teacher_department"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <Button
+        style="?android:attr/buttonBarButtonStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/courses" />
+
+    <Button
+        style="?android:attr/buttonBarButtonStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/comments" />
+
+    <Button
+        style="?android:attr/buttonBarButtonStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/comments" />
 
 </LinearLayout>
