--- a/FMIRAtingsAndroid/res/layout/activity_login.xml
+++ b/FMIRAtingsAndroid/res/layout/activity_login.xml
@@ -4,5 +4,10 @@
     android:layout_height="match_parent"
     tools:context="${relativePackage}.${activityClass}" >
 
-    
+     <!-- The main content view -->
+
+        <FrameLayout
+            android:id="@+id/content_frame"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 </RelativeLayout>
