--- a/FMIRAtingsAndroid/res/layout/add_comment_layout.xml
+++ b/FMIRAtingsAndroid/res/layout/add_comment_layout.xml
@@ -37,6 +37,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="21dp"
                 android:numStars="5"
+                 android:clickable="true"
                 android:progressDrawable="@drawable/review_ratings_stars_states"
                 android:rating="0" />
 
@@ -55,6 +56,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="21dp"
                 android:numStars="5"
+                 android:clickable="true"
                 android:progressDrawable="@drawable/review_ratings_stars_states"
                 android:rating="0" />
 
@@ -73,6 +75,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="21dp"
                 android:numStars="5"
+                android:clickable="true"
                 android:progressDrawable="@drawable/review_ratings_stars_states"
                 android:rating="0" />
             
@@ -91,6 +94,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="21dp"
                 android:numStars="5"
+                 android:clickable="true"
                 android:progressDrawable="@drawable/review_ratings_stars_states"
                 android:rating="0" />
             
@@ -109,6 +113,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="21dp"
                 android:numStars="5"
+                 android:clickable="true"
                 android:progressDrawable="@drawable/review_ratings_stars_states"
                 android:rating="0" />
         </LinearLayout>
