--- a/FMIRAtingsAndroid/res/layout/login_layout.xml
+++ b/FMIRAtingsAndroid/res/layout/login_layout.xml
@@ -15,20 +15,20 @@
         android:src="@drawable/ic_launcher" />
 
     <EditText
-        android:id="@+id/email"
+        android:id="@+id/username"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/app_logo"
         android:layout_centerHorizontal="true"
-        android:hint="@string/email"
+        android:hint="@string/name"
         android:layout_marginBottom="@dimen/app_margin_big"
-        android:inputType="textEmailAddress" />
+        />
     
       <EditText
         android:id="@+id/password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/email"
+        android:layout_below="@id/username"
         android:layout_centerHorizontal="true"
         android:hint="@string/password"
         android:inputType="textPassword" />
