--- a/FMIRAtingsAndroid/res/layout/drawer_list_item.xml
+++ b/FMIRAtingsAndroid/res/layout/drawer_list_item.xml
@@ -5,4 +5,4 @@
     android:textSize="18sp"
     android:maxLines="1"
     android:ellipsize="end"
-    android:textColor="@android:color/primary_text_dark" />
+    android:textColor="@android:color/primary_text_light" />
