Teacher profile and Votes changes

--- a/FMIRAtingsAndroid/res/layout/add_comment_layout.xml
+++ b/FMIRAtingsAndroid/res/layout/add_comment_layout.xml
@@ -1,23 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="wrap_content" >
 
     <ScrollView
+        android:id="@+id/scroll_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="match_parent"
+        android:fillViewport="true"
+        android:scrollbars="vertical"
+        android:isScrollContainer="true"
+        android:layout_alignParentTop="true" >
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
-            android:orientation="vertical" >
+            android:orientation="vertical" 
+             android:isScrollContainer="false">
 
             <TextView
                 android:id="@+id/add_rating_label"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/app_margin_big"
+                android:layout_marginBottom="@dimen/app_margin_small"
                 android:layout_marginTop="20dp"
                 android:gravity="center"
                 android:text="@string/add_rating" />
@@ -26,77 +32,73 @@
                 android:id="@+id/clarity"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/app_margin_big"
+                android:layout_marginBottom="@dimen/app_margin_small"
                 android:layout_marginTop="20dp"
                 android:gravity="center"
                 android:text="@string/clarity" />
 
             <RatingBar
                 android:id="@+id/clarity_rating"
-                style="?android:attr/ratingBarStyleIndicator"
+                style="?android:attr/ratingBarStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="21dp"
                 android:clickable="true"
                 android:numStars="5"
-                android:progressDrawable="@drawable/review_ratings_stars_states"
-                android:rating="0" />
+                android:progressDrawable="@drawable/review_ratings_stars_states" />
 
             <TextView
                 android:id="@+id/enthusiasum"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/app_margin_big"
+                android:layout_marginBottom="@dimen/app_margin_small"
                 android:layout_marginTop="20dp"
                 android:gravity="center"
                 android:text="@string/enthusiasm" />
 
             <RatingBar
                 android:id="@+id/enthusiasum_rating"
-                style="?android:attr/ratingBarStyleIndicator"
+                style="?android:attr/ratingBarStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="21dp"
                 android:clickable="true"
                 android:numStars="5"
-                android:progressDrawable="@drawable/review_ratings_stars_states"
-                android:rating="0" />
+                android:progressDrawable="@drawable/review_ratings_stars_states" />
 
             <TextView
                 android:id="@+id/evaluation"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/app_margin_big"
+                android:layout_marginBottom="@dimen/app_margin_small"
                 android:layout_marginTop="20dp"
                 android:gravity="center"
                 android:text="@string/evaluation" />
 
             <RatingBar
                 android:id="@+id/evaluation_rating"
-                style="?android:attr/ratingBarStyleIndicator"
+                style="?android:attr/ratingBarStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="21dp"
                 android:clickable="true"
                 android:numStars="5"
-                android:progressDrawable="@drawable/review_ratings_stars_states"
-                android:rating="0" />
+                android:progressDrawable="@drawable/review_ratings_stars_states" />
 
             <TextView
                 android:id="@+id/speed"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/app_margin_big"
+                android:layout_marginBottom="@dimen/app_margin_small"
                 android:layout_marginTop="20dp"
                 android:gravity="center"
                 android:text="@string/speed" />
 
             <RatingBar
                 android:id="@+id/speed_rating"
-                style="?android:attr/ratingBarStyleIndicator"
+                style="?android:attr/ratingBarStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="21dp"
                 android:clickable="true"
                 android:numStars="5"
-                android:progressDrawable="@drawable/review_ratings_stars_states"
-                android:rating="0" />
+                android:progressDrawable="@drawable/review_ratings_stars_states" />
 
             <TextView
                 android:id="@+id/scope"
@@ -109,13 +111,12 @@
 
             <RatingBar
                 android:id="@+id/scope_rating"
-                style="?android:attr/ratingBarStyleIndicator"
+                style="?android:attr/ratingBarStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="21dp"
                 android:clickable="true"
                 android:numStars="5"
-                android:progressDrawable="@drawable/review_ratings_stars_states"
-                android:rating="0" />
+                android:progressDrawable="@drawable/review_ratings_stars_states" />
         </LinearLayout>
     </ScrollView>
 
