--- a/WebUI/FMIRatingsWeb/public_html/css/main.css
+++ b/WebUI/FMIRatingsWeb/public_html/css/main.css
@@ -77,3 +77,11 @@ body {
     background-color: #f9f9f9;
     color: #204d74;
 }
+
+#search-results-container {
+    margin: 20px 20px;
+}
+
+#search-results-container > .search-results-section > div {
+    margin: 20px 20px;
+}}
