Added fragment, adapter, model, query for Materials Added button for materials in Courses

--- a/FMIRAtingsAndroid/res/layout/course_fragment_layout.xml
+++ b/FMIRAtingsAndroid/res/layout/course_fragment_layout.xml
@@ -50,4 +50,10 @@
         android:layout_height="wrap_content"
         android:text="@string/vote" />
     
+    <Button
+        android:id="@+id/materials_button"
+        style="?android:attr/buttonBarButtonStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/materials" />
 </LinearLayout>
