--- a/FMIRAtingsAndroid/res/layout/course_fragment_layout.xml
+++ b/FMIRAtingsAndroid/res/layout/course_fragment_layout.xml
@@ -1,59 +1,172 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" 
-    android:padding="@dimen/app_margin_big">
-    
-	<TextView
-        android:id="@+id/course_name_label"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/course"
-        android:textStyle="bold"/>
+    android:layout_height="match_parent" >
 
-    <TextView
-        android:id="@+id/course_name"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="@dimen/app_margin_big" >
 
-   <TextView
-        android:id="@+id/course_category_label"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/category"
-        android:textStyle="bold"
-         />
-    <TextView
-        android:id="@+id/category"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/course_name_label"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/course"
+            android:textStyle="bold" />
 
-    <Button
-        android:id="@+id/teachers_button"
-        style="?android:attr/buttonBarButtonStyle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/teachers" />
+        <TextView
+            android:id="@+id/course_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
-    <Button
-        android:id="@+id/comments_button"
-        style="?android:attr/buttonBarButtonStyle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/comments" />
+        <TextView
+            android:id="@+id/course_category_label"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/category"
+            android:textStyle="bold" />
 
-    <Button
-        android:id="@+id/vote_button"
-        style="?android:attr/buttonBarButtonStyle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/vote" />
-    
-    <Button
-        android:id="@+id/materials_button"
-        style="?android:attr/buttonBarButtonStyle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/materials" />
-</LinearLayout>
+        <TextView
+            android:id="@+id/category"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:isScrollContainer="false"
+            android:orientation="vertical" >
+
+            <TextView
+                android:id="@+id/add_rating_label"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/app_margin_small"
+                android:layout_marginTop="20dp"
+                android:gravity="center"
+                android:text="@string/add_rating" />
+
+            <TextView
+                android:id="@+id/clarity"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/app_margin_small"
+                android:layout_marginTop="10dp"
+                android:gravity="center"
+                android:text="@string/clarity" />
+
+            <RatingBar
+                android:id="@+id/clarity_rating"
+                style="?android:attr/ratingBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="21dp"
+                android:clickable="false"
+                android:numStars="5"
+                android:progressDrawable="@drawable/review_ratings_stars_states" />
+
+            <TextView
+                android:id="@+id/workload"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/app_margin_small"
+                android:layout_marginTop="20dp"
+                android:gravity="center"
+                android:text="@string/workload" />
+
+            <RatingBar
+                android:id="@+id/workload_rating"
+                style="?android:attr/ratingBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="21dp"
+                android:clickable="false"
+                android:numStars="5"
+                android:progressDrawable="@drawable/review_ratings_stars_states" />
+
+            <TextView
+                android:id="@+id/interest"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/app_margin_small"
+                android:layout_marginTop="20dp"
+                android:gravity="center"
+                android:text="@string/interest" />
+
+            <RatingBar
+                android:id="@+id/interest_rating"
+                style="?android:attr/ratingBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="21dp"
+                android:clickable="false"
+                android:numStars="5"
+                android:progressDrawable="@drawable/review_ratings_stars_states" />
+
+            <TextView
+                android:id="@+id/simplicity"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/app_margin_small"
+                android:layout_marginTop="20dp"
+                android:gravity="center"
+                android:text="@string/simplicity" />
+
+            <RatingBar
+                android:id="@+id/simplicity_rating"
+                style="?android:attr/ratingBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="21dp"
+                android:clickable="false"
+                android:numStars="5"
+                android:progressDrawable="@drawable/review_ratings_stars_states" />
+
+            <TextView
+                android:id="@+id/usefulness"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/app_margin_big"
+                android:layout_marginTop="20dp"
+                android:gravity="center"
+                android:text="@string/usefulness" />
+
+            <RatingBar
+                android:id="@+id/usefulness_rating"
+                style="?android:attr/ratingBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="21dp"
+                android:clickable="false"
+                android:numStars="5"
+                android:progressDrawable="@drawable/review_ratings_stars_states" />
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/teachers_button"
+            style="?android:attr/buttonBarButtonStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/teachers" />
+
+        <Button
+            android:id="@+id/comments_button"
+            style="?android:attr/buttonBarButtonStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/comments" />
+
+        <Button
+            android:id="@+id/vote_button"
+            style="?android:attr/buttonBarButtonStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/vote" />
+
+        <Button
+            android:id="@+id/materials_button"
+            style="?android:attr/buttonBarButtonStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/materials" />
+    </LinearLayout>
+
+</ScrollView>
